Fix that makes sure that extension methods resolves correctly for functionTypes.